Bug 778128.  Make putImageData and createImageData on non-Azure canvas work with Xrays.  r=peterv